Shang New Live/src/objects/Asset_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Base_Rent__c</fullName>
        <label>Base Rent</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exected_Rental__c</fullName>
        <label>Exected Rental</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Asset Plans</relationshipLabel>
        <relationshipName>Asset_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Sqft__c</fullName>
        <label>Rate (Sqft.)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>LOI Issued</fullName>
                </value>
                <value>
                    <fullName>LOI Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Plan</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-AP-{000000}</displayFormat>
        <label>Asset Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>